--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  image_picker: ^0.8.7+5 
+  image_picker: ^0.8.7+5
+  shared_preferences: ^2.1.2
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
