--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   image_picker: ^0.8.7+5
   shared_preferences: ^2.1.2
   table_calendar: ^3.0.9
+  flutter_speed_dial: ^7.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
