--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,10 +33,12 @@ dependencies:
   permission_handler: ^10.0.0
   contacts_service: ^0.6.3
   fast_contacts: ^1.1.1
+  flutter_dotenv: ^5.1.0
   image_picker: ^0.8.7+5
   shared_preferences: ^2.1.2
   table_calendar: ^3.0.9
   flutter_speed_dial: ^7.0.0
+  http: ^1.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -65,9 +67,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
