--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   table_calendar: ^3.0.9
   flutter_speed_dial: ^7.0.0
   http: ^1.1.0
+  getwidget: ^3.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
