--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   contacts_service: ^0.6.3
   fast_contacts: ^1.1.1
   flutter_dotenv: ^5.1.0
+  colorful_safe_area: ^1.0.0
   image_picker: ^0.8.7+5
   shared_preferences: ^2.1.2
   table_calendar: ^3.0.9
